# intent-engine

./: .gitignore  IntentEngine_v1_Spec.md  IntentEngine_v2_Spec.md  IntentEngine_v3_Spec.md  README.md  demo.py  examples.py  pyproject.toml  requirements.txt
backend/: README.md  demo_prophecy.py  requirements-dev.txt
backend/intent_engine/: api.py  intent_parser.py  llm_adapter.py  prophecy_agent.py  ranking_engine.py  schemas.py  simple_ranker.py
backend/intent_engine/adapters/: ecommerce.py  food_delivery.py  music.py  ride_matching.py  streaming.py
backend/intent_engine/core/: adapter_protocol.py  domain_engine.py
backend/scripts/: demo.py  demo_runner.py
backend/tests/: test_integration.py  test_intent_parser.py  test_prophecy_agent.py  test_ranking_engine.py
backend/tests/adapters/: test_ecommerce.py  test_food_delivery.py  test_music.py  test_ride_matching.py  test_streaming.py
backend/tests/core/: test_domain_engine.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/.lovable/: plan.md
frontend/scripts/: capture-screenshots.js
frontend/src/: index.css
frontend/src/components/: ContentRow.tsx  PinGateModal.tsx  ShowCard.tsx  WizardProgress.tsx
intent_engine/: __init__.py  api.py  app.py  intent_parser.py  prophecy_agent.py  ranker.py  ranking_engine.py  rules_translator.py  schemas.py
scripts/: examples.py
tests/: __init__.py  test_api.py  test_integration.py  test_intent_parser.py  test_prophecy_agent.py  test_ranker.py  test_reranker_soft.py  test_schemas.py  test_translator.py
(+19 files in other folders)
